Add Glide as library for Image management and API key for get information from the movie API

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+MyMoviesApiKey = "f8d19f189210c3bb05a0617d3f20edc3"
