--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.movie_grid.MainActivity"
+            android:name=".app.ui.movies.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -21,20 +21,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MovieDetailActivity"
-            android:parentActivityName=".ui.movie_grid.MainActivity"
+            android:name=".app.ui.details.MovieDetailActivity"
+            android:parentActivityName=".app.ui.movies.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.movie_grid.MainActivity" />
+                android:value=".app.ui.movies.MainActivity" />
         </activity>
         <activity
-            android:name=".ui.settings.SettingsActivity"
+            android:name=".app.ui.settings.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName=".ui.movie_grid.MainActivity">
+            android:parentActivityName=".app.ui.movies.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.josecognizant.popmovies.ui.movie_grid.MainActivity" />
+                android:value=".app.ui.movies.MainActivity" />
         </activity>
 
         <service android:name=".service.MoviesDownloadService" />
