--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,9 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     //Stetho
     compile 'com.facebook.stetho:stetho:1.3.1'
+
+    //Dagger 2
+    apt 'com.google.dagger:dagger-compiler:2.5'
+    compile 'com.google.dagger:dagger:2.5'
+    provided 'javax.annotation:jsr250-api:1.0'
 }
