--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,11 +21,20 @@ android {
     buildTypes.each {
         it.buildConfigField 'String', 'MOVIES_API_KEY', MyMoviesApiKey
     }
+
+    productFlavors {
+        prod {
+
+        }
+        mock {
+            applicationId "com.josecognizant.popmovies"
+        }
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.android.support:design:24.1.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
@@ -42,4 +51,14 @@ dependencies {
     apt 'com.google.dagger:dagger-compiler:2.5'
     compile 'com.google.dagger:dagger:2.5'
     provided 'javax.annotation:jsr250-api:1.0'
+
+    //Junit
+    testCompile "junit:junit:4.12"
+
+    //PowerMock
+    testCompile "com.google.truth:truth:0.27"
+    testCompile "org.easymock:easymock:3.4"
+    testCompile "org.powermock:powermock-core:1.6.1"
+    testCompile "org.powermock:powermock-module-junit4:1.6.1"
+    testCompile "org.powermock:powermock-api-easymock:1.6.1"
 }
